--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,21 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff">
 
-    <Button
-        android:id="@+id/btn_bigWheel"
-        android:layout_width="match_parent"
+    <com.example.bigwheeldemo.LuckyView
+        android:id="@+id/id_luckypan"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerInParent="true"
+        android:padding="30dp" />
+
+    <ImageView
+        android:id="@+id/id_start_btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="bigWheel" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/start" />
 
-    <Button
-        android:id="@+id/btn_LuckyOneView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="LuckyOneView" />
 
-    <Button
-        android:id="@+id/btn_LuckyTwoView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="LuckyTwoView" />
-
-</LinearLayout>
+</RelativeLayout>
